Fixed sticky header spacing

--- a/ClientApp/src/app/shopping/store-items/store-items.component.scss
+++ b/ClientApp/src/app/shopping/store-items/store-items.component.scss
@@ -1,4 +1,9 @@
 :host {
+  ::ng-deep {
+    .mat-form-field {
+      margin-bottom: -13px;
+    }
+  }
 }
 
 .store-items-container {
@@ -36,7 +41,7 @@
   background-color: #f5f5f5;
   margin: 0;
   padding: 16px;
-  top: 96px;
+  top: 84px;
   z-index: 1;
   position: sticky;
 }
